--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_LARAVEL_URL=http://localhost:8080
+# VITE_LARAVEL_URL=http://localhost:8080
+VITE_LARAVEL_URL=https://8d61-136-144-35-162.ngrok-free.app
