--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mdi/font": "7.0.96",
     "axios": "^1.6.7",
     "pinia": "^2.1.7",
+    "quill": "^2.0.0-rc.2",
     "roboto-fontface": "*",
     "vue": "^3.3.0",
     "vue-router": "^4.2.5",
