--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "pinia": "^2.1.7",
     "quill": "^2.0.0-rc.2",
     "roboto-fontface": "*",
