Updated api url

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_LARAVEL_URL=https://alone-inside-my-room.com/laravel/public
+VITE_LARAVEL_URL=https://api.aloneinsidemyroom.com
 VITE_YANDEX_METRIKA_ID=96569431
