--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,8 +1,27 @@
 <IfModule mod_rewrite.c>
+  # Enable the RewriteEngine
   RewriteEngine On
+
+  # Set the base URL for per-directory rewrites
   RewriteBase /
+  
+  # Force HTTPS: redirect HTTP requests to HTTPS
+  # Check if HTTPS is off, which means the request is not secure
+  RewriteCond %{HTTPS} off
+
+  # Redirect to the same URL with HTTPS
+  RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+  
+  # Redirect requests to index.html unless the requested resource actually exists
+  # Do nothing for direct requests to index.html, preventing a loop
   RewriteRule ^index\.html$ - [L]
+
+  # Check if the requested file does not exist
   RewriteCond %{REQUEST_FILENAME} !-f
+
+  # Check if the requested directory does not exist
   RewriteCond %{REQUEST_FILENAME} !-d
+  
+  # Redirect all other requests to index.html, enabling SPA routing
   RewriteRule . /index.html [L]
 </IfModule>
